--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,28 @@
-version: '3'
-
+version: '3.8'
 services:
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
-    ports:
-      - "2181:2181"
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
 
   kafka:
     image: confluentinc/cp-kafka:latest
-    depends_on:
-      - zookeeper
     ports:
       - "9092:9092"
     environment:
+      KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    depends_on:
+      - zookeeper
+
+  go-app:
+      build: .
+      ports:
+        - "8080:8080"
+      depends_on:
+        - kafka
+      environment:
+        KAFKA_BROKER: kafka:9092
